[tool.poetry]
name = "iflb"
version = "0.1.0"
description = ""
authors = ["debu69er <debu69er@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
streamlit = "^1.37.0"
plotly = "^5.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
