[tool.poetry]
name = "iflb"
version = "0.1.0"
description = ""
authors = ["debu69er <debu69er@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.1"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-bootstrap-components = "^1.6.0"


[tool.poetry.group.dev.dependencies]
streamlit = "^1.37.0"
plotly = "^5.23.0"
streamlit-vertical-slider = "^2.5.5"
streamlit-toggle = "^0.1.3"
dash = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
